# Haruki-Sekai-Asset-Updater

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  app.py  back.txt  build-docker.sh  configs.example.py  docker-compose.yml  go.mod  go.sum  haruki-asset-configs.example.yaml  main.go  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml  release.yml  rust-ci.yml
Modules/: log_format.py
Modules/SekaiAssetUpdater/: acb_extractor.py  cryptor.py  jp_env.example.py  model.py  obfuscator.py  unpacker.py  updater.py
api/: route.go  route_test.go
config/: config.go
crates/assetstudio-ffi/: Cargo.toml
crates/assetstudio-ffi/src/: frame.rs  lib.rs  native.rs  types.rs  worker_pool.rs
crates/assetstudio-ffi/tests/fixtures/: cooperative-worker.sh  stubborn-worker.sh
deploy/kubernetes/: haruki-asset-updater.yaml
docs/: assetstudio-ffi-samples.md  assetstudio-ffi.md  assetstudio-native-ffi.md  double-ffi-benchmarks.md  double-ffi-change-log.md  double-ffi-operations.md
docs/migration/: cloud-native-config.md  config-to-v3.md  config-v1-to-v2.md  go-reference-behavior.md  go-vs-rust-parity.md  v2-api.md
examples/: hca_decode_example.go
src/: core.rs  lib.rs  main.rs  service.rs
src/core/: asset_execution.rs  assetstudio_ffi.rs  assetstudio_native.rs  cleanup.rs  codec.rs  config.rs  config_migration.rs  download_records.rs  errors.rs  export_pipeline.rs  git_sync.rs  media.rs  media_ffi.rs  models.rs  pipeline.rs  regions.rs  retry.rs  storage.rs
src/core/export_pipeline/: implementation.rs
src/core/export_pipeline/implementation/: assetstudio.rs  images.rs  limits.rs  media_postprocess.rs  paths.rs  payload.rs  tasks.rs  tests.rs  types.rs
src/core/media/: ffi.rs  ffi_disabled.rs  tests.rs
src/service/: http.rs  jobs.rs  logging.rs
tests/: api.rs  assetstudio_real.rs  cli.rs  codec_smoke.rs  dockerfile_haruki_3d.rs  logging.rs
tests/files/: jacket_s_712  unityasset_long
tools/ffi/go/: go.mod  main.go
tools/ffi/go-worker/: go.mod  main.go
tools/ffi/python/: assetstudio_ffi.py  assetstudio_worker_pool.py
updater/: cryptor.go  cryptor_test.go  exporter.go  exporter_test.go  obfuscator.go  obfuscator_test.go  struct.go  struct_test.go  updater.go  updater_test.go
utils/: binary_test.go  struct.go  struct_test.go  utils.go  utils_test.go
utils/cloud/: struct.go  uploader.go  uploader_test.go
utils/cricodecs/acb/: acbextractor.go  const.go  track.go  utf.go
utils/cricodecs/criacb/: acbextractor.go  afs.go  const.go  helpers.go  reader.go  track.go  utf.go
utils/cricodecs/crihca/: clhca.go  clhcadecoder.go  clhcaimdct.go  clhcatables.go  hcadecoder.go
utils/cricodecs/criusm/: usm.go
utils/cricodecs/hca/: clhca.go  clhcadecoder.go  hcadecoder.go
utils/cricodecs/usm/: metadata.go  usm.go  usm_test.go
utils/exporter/: acb.go  converter.go  hca.go  usm.go
utils/git/: git.go  git_test.go
utils/logger/: logger_test.go
utils/orderedmsgpack/: orderedmsgpack.go
