[package]
name = "haruki-sekai-asset-updater"
version = "0.1.0"
edition = "2021"
description = "Rust service for Haruki Sekai Asset Updater"
license = "MIT"

[dependencies]
aes = "0.9"
axum = { version = "0.8", features = ["macros", "json"] }
aws-config = "1.8"
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "default-https-client",
    "http-1x",
    "rt-tokio",
    "sigv4a",
] }
cbc = { version = "0.2", features = ["alloc"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
cridecoder = "0.2.3"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "webp"] }
libc = "0.2"
libloading = "0.8"
mime_guess = "2.0"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["brotli", "deflate", "gzip", "http2", "json", "rustls"] }
rmp-serde = "1.3"
rsmpeg = { version = "0.18.0", default-features = false, features = ["ffmpeg8", "link_system_ffmpeg"], optional = true }
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"
tempfile = "3.27"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
yaml_serde = "0.10"

[dev-dependencies]
sha2 = "0.11.0"
tower = { version = "0.5.3", features = ["util"] }

[features]
default = []
media-ffi = ["dep:rsmpeg"]

[profile.release]
lto = "thin"
