[project]
name = "Haruki-Sekai-Asset-Updater"
version = "2.1.0"
description = "A game asset extractor with HTTP API for Project Sekai"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acb-py>=1.2.4",
    "aiofiles~=24.1.0",
    "aiohttp~=3.11.12",
    "coloredlogs~=15.0.1",
    "cryptography~=44.0.1",
    "hypercorn~=0.17.3",
    "msgpack~=1.1.0",
    "pycricodecs",
    "pydantic~=2.10.6",
    "pydub>=0.25.1",
    "quart~=0.20.0",
    "rich~=13.9.4",
    "tenacity~=9.0.0",
    "ujson~=5.10.0",
    "unitypy~=1.10.13",
]

[tool.uv.sources]
pycricodecs = { git = "https://github.com/Youjose/PyCriCodecs" }